--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 		    <a href="https://shangchenzhou.com/projects/LEDNet/">Project Page</a>| 	
                     <a href="https://github.com/sczhou/LEDNet/">Code</a>|
 		    <a href="https://drive.google.com/drive/folders/11HcsiHNvM7JUlbuHIniREdQ2peDUhtwX//">Dataset</a>|
-	            <a href="https://replicate.com/sczhou/lednet/">Replicate Demo</a>
+	            <a href="https://replicate.com/sczhou/lednet/">Replicate</a>
                 </span>
             </p>
           </div>
