--- a/index.html
+++ b/index.html
@@ -279,6 +279,30 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 	
+
+      <div class="publication">
+            <img src="logo/URanker.png" onmouseover="this.src='logo/URanker.png';" onmouseout="this.src='logo/URanker.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Underwater Ranker: Learn Which Is Better and How to Be Better</a>
+                </strong>
+		  <br> 
+		<em><b>AAAI, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+                <br> 
+              Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <b>Chongyi Li<sup>+</sup></b>.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/pdf/2208.06857.pdf">PDF</a>| 
+		    <a href="https://li-chongyi.github.io/URanker_files/">Project Page</a>| 	
+                    <a href="https://github.com/RQ-Wu/UnderwaterRanker">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
 	  <div class="publication">
             <img src="logo/Cudi.jpg" onmouseover="this.src='logo/Cudi.jpg';" onmouseout="this.src='logo/Cudi.jpg';" class="publogo"  width="300 px">
             <p> 
@@ -286,7 +310,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">CuDi: Curve Distillation for Efficient and Controllable Exposure Adjustment</a>
                 </strong>
 		  <br> 
-		<em><b>2022</b></em>
+		<em><b>2023</b></em>
                 <br> 
               <b>Chongyi Li</b>, Chunle Guo, Ruicheng Feng, Shangchen Zhou, and Chen Change Loy.
                 <br>
@@ -308,13 +332,13 @@ research and develop advanced deep learning algorithms for image and video enhan
 	
 	
 	<div class="publication">
- <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/BeautyREC.mp4"> <source src="logo/BeautyREC.mp4" type="video/mp4"></video>                
+ <img src="logo/Beauty_REC_dataset.png" onmouseover="this.src='logo/Beauty_REC_dataset.png';" onmouseout="this.src='logo/Beauty_REC_dataset.png';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">BeautyREC: Robust, Efficient, and Content-preserving Makeup Transfer</a>
                 </strong>
 		  <br> 
-		<em><b>2022</b></em>
+		<em><b>2023</b></em>
                 <br> 
               Qixin Yan, Chunle Guo, Jixin Zhao, Yuekun Dai, Chen Change Loy, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
@@ -330,6 +354,28 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 
+		<div class="publication">
+ <img src="logo/FlexiCurve.png" onmouseover="this.src='logo/FlexiCurve.png';" onmouseout="this.src='logo/FlexiCurve.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">FlexiCurve: Flexible Piecewise Curves Estimation for Photo Retouching</a>
+                </strong>
+		  <br> 
+		<em><b>2023</b></em>
+                <br> 
+              <b>Chongyi Li</b>, Chunle Guo, Shangchen Zhou, Qiming Ai, Ruicheng Feng, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 	<!--
    <div class="publication">
             <img src="logo/R2D2_input.jpg" onmouseover="this.src='logo/R2D2_ours.jpg';" onmouseout="this.src='logo/R2D2_input.jpg';" class="publogo"  width="300 px">
@@ -357,28 +403,6 @@ research and develop advanced deep learning algorithms for image and video enhan
 -->		
 	
 
-      <div class="publication">
-            <img src="logo/URanker.png" onmouseover="this.src='logo/URanker.png';" onmouseout="this.src='logo/URanker.png';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Underwater Ranker: Learn Which Is Better and How to Be Better</a>
-                </strong>
-		  <br> 
-		<em><b>AAAI, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
-                <br> 
-              Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <b>Chongyi Li<sup>+</sup></b>.
-                <br>
-                <span class="links">
-                    <a href="https://arxiv.org/pdf/2208.06857.pdf">PDF</a>| 
-		    <a href="https://li-chongyi.github.io/URanker_files/">Project Page</a>| 	
-                    <a href="https://github.com/RQ-Wu/UnderwaterRanker">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	<br />
-	<br />
 	
 	<div class="publication">
             <img src="logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif" onmouseover="this.src='logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif';" onmouseout="this.src='logo/Continuous_Fourier_transform_of_rect_and_sinc_functions.gif';" class="publogo"  width="300 px">
