--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/02 --We thank IEEE Signal Processing Society for highlighting our IEEE TIP'2020 work, An Underwater Image Enhancement Benchmark Dataset and Beyond, as one of SPS's top-25 most downloaded articles on IEEE Xplore®, 2021-2022</li>
 <li> 2023/02 --We organize a special issue on Mobile Intelligent Photography and Imaging in <strong>International Journal of Computer Vision (IJCV)</strong>. (Paper submission deadline: 1 June 2023)</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by ICLR 2023 as <strong>Oral, notable-top-5%</strong>!</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by AAAI 2023 as <strong>Oral</strong>!</li>
@@ -916,7 +917,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
 		    <br>
-		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper & ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
+		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper & ESI Highly Cited Paper & TIP Popular Articles & SPS Top-25 Downloaded Articles]</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
@@ -1240,6 +1241,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
+<li>IEEE Signal Processing Society's top-25 most downloaded articles on IEEE Xplore®, Sept. 2021 - Sept. 2022.
 <li>Pattern Recognition (Elsevier Journal) <a href="./PDF/PR_honorable mention_2020.pdf">(Best Paper Honourable Mention)</a></li>
 <li> Our team Feedforward won the <strong>second runner-up (3/317)</strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
 <li><strong>World’s Top 2% Scientists (2022)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2021_pubs_since_1788_wopp_extracted_202209), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
