--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 		    <br>
 		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper & ESI Highly Cited Paper & TIP Popular Articles & SPS Top-25 Downloaded Articles]</font></a></b></em>
                 <br>
-                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
+                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, et al.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>| 
