--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ research and develop advanced deep learning algorithms for image and video enhan
               <b>Chongyi Li</b>, Chunle Guo, Man Zhou, Zhexin Liang, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
+                    <a href="https://arxiv.org/abs/2302.11831">PDF</a>| 
 		    <a href="https://li-chongyi.github.io/UHDFour/">Project Page</a>| 	
                     <a href="">Code</a>
                 </span>
