--- a/UHDFour/index.html
+++ b/UHDFour/index.html
@@ -217,7 +217,7 @@
               <center>
                 <a href="#" target="_blank" class="imageLink"><img
                     src="./src/paper.png" , height="120"></a><br><br>
-                <a href="" disabled target="_blank">Paper</a>
+                <a href="https://arxiv.org/abs/2302.11831" disabled target="_blank">Paper</a>
               </center>
             </td>
             <td width="30%">
