--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/03 --Five papers got accepted by <strong>CVPR 2023</strong>.</li>
 <li> 2023/02 --Elevated to the grade of <strong>IEEE Senior Member</strong>!</li>
 <li> 2023/02 --We thank IEEE Signal Processing Society for highlighting our IEEE TIP'2020 work, An Underwater Image Enhancement Benchmark Dataset and Beyond, as one of SPS's top-25 most downloaded articles on IEEE Xplore®, 2021-2022</li>
 <li> 2023/02 --We organize a special issue on Mobile Intelligent Photography and Imaging in <strong>International Journal of Computer Vision (IJCV)</strong>. (Paper submission deadline: 1 June 2023)</li>
