--- a/index.html
+++ b/index.html
@@ -256,6 +256,31 @@ research and develop advanced deep learning algorithms for image and video enhan
 <div class="container">
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Selected Publications:</h2>
         <br>
+
+			  <div class="publication">
+             <img src="logo/RIDCP_video.mp4" onmouseover="this.src='logo/RIDCP_video.mp4';" onmouseout="this.src='logo/RIDCP_video.mp4';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">RIDCP: Revitalizing Real Image Dehazing via High-Quality Codebook Priorst</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+                <br> 
+              Ruiqi Wu,  Zhengpeng Duan, Chunle Guo, Zhi Chai, and <b>Chongyi Li</b>.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br>
+	<br />
+	<br />
+	<br />
 	
 		  <div class="publication">
             <img src="logo/UDHFour.png" onmouseover="this.src='logo/UDHFour.png';" onmouseout="this.src='logo/UDHFour.png';" class="publogo"  width="300 px">
