--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@ research and develop advanced deep learning algorithms for image and video enhan
              <img src="logo/RIDCP_video.mp4" onmouseover="this.src='logo/RIDCP_video.mp4';" onmouseout="this.src='logo/RIDCP_video.mp4';" class="publogo"  width="300 px">
             <p> 
                 <strong>
-                    <a href="">RIDCP: Revitalizing Real Image Dehazing via High-Quality Codebook Priorst</a>
+                    <a href="">RIDCP: Revitalizing Real Image Dehazing via High-Quality Codebook Priors</a>
                 </strong>
 		  <br> 
-		<em><b>CVPR, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+		<em><b>CVPR, 2023 </b></em>
                 <br> 
               Ruiqi Wu,  Zhengpeng Duan, Chunle Guo, Zhi Chai, and <b>Chongyi Li</b>.
                 <br>
