--- a/index.html
+++ b/index.html
@@ -258,8 +258,9 @@ research and develop advanced deep learning algorithms for image and video enhan
         <br>
 
 			  <div class="publication">
-             <img src="logo/RIDCP_video.mp4" onmouseover="this.src='logo/RIDCP_video.mp4';" onmouseout="this.src='logo/RIDCP_video.mp4';" class="publogo"  width="300 px">
-            <p> 
+         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/RIDCP_video.mp4"> <source src="logo/RIDCP_video.mp4" type="video/mp4"></video>    
+	<p>     
+	<p> 
                 <strong>
                     <a href="">RIDCP: Revitalizing Real Image Dehazing via High-Quality Codebook Priors</a>
                 </strong>
