--- a/index.html
+++ b/index.html
@@ -308,7 +308,29 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 	
-
+   <div class="publication">
+            <img src="logo/BracketFlare_logo.png" onmouseover="this.src='logo/BracketFlare_logo.png';" onmouseout="this.src='logo/BracketFlare_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">	Nighttime Smartphone Reflective Flare Removal Using Optical Center Symmetry Prior</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2023</b></em>
+                <br> 
+              Yuekun Dai, Yihang Luo, Shangchen Zhou, <b>Chongyi Li</b>, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
 	
 		  <div class="publication">
             <img src="logo/UDHFour.png" onmouseover="this.src='logo/UDHFour.png';" onmouseout="this.src='logo/UDHFour.png';" class="publogo"  width="300 px">
