--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ research and develop advanced deep learning algorithms for image and video enhan
             <img src="logo/BracketFlare_logo.png" onmouseover="this.src='logo/BracketFlare_logo.png';" onmouseout="this.src='logo/BracketFlare_logo.png';" class="publogo"  width="300 px">
             <p> 
                 <strong>
-                    <a href="">	Nighttime Smartphone Reflective Flare Removal Using Optical Center Symmetry Prior</a>
+                    <a href="">Nighttime Smartphone Reflective Flare Removal Using Optical Center Symmetry Prior</a>
                 </strong>
 		  <br> 
 		<em><b>CVPR, 2023</b></em>
@@ -330,7 +330,28 @@ research and develop advanced deep learning algorithms for image and video enhan
           <br>
 	<br />
 	<br />
-	
+	<div class="publication">
+            <img src="logo/SKF_logo.png" onmouseover="this.src='logo/SKF_logo.png';" onmouseout="this.src='logo/SKF_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Learning Semantic-Aware Knowledge Guidance for Low-Light Image Enhancement</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2023</b></em>
+                <br> 
+              Yuhui Wu, Chen Pan, Guoqing Wang, Yang Yang, Jiwei Wei, <b>Chongyi Li</b>, and Hengtao Shen.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 	
 		  <div class="publication">
             <img src="logo/UDHFour.png" onmouseover="this.src='logo/UDHFour.png';" onmouseout="this.src='logo/UDHFour.png';" class="publogo"  width="300 px">
