--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@ research and develop advanced deep learning algorithms for image and video enhan
           <br>
 	<br />
 	<br />
+	
 	<div class="publication">
             <img src="logo/SKF_logo.png" onmouseover="this.src='logo/SKF_logo.png';" onmouseout="this.src='logo/SKF_logo.png';" class="publogo"  width="300 px">
             <p> 
@@ -353,6 +354,28 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 	
+		<div class="publication">
+            <img src="logo/AlignFormer_logo.png" onmouseover="this.src='logo/AlignFormer_logo.png';" onmouseout="this.src='logo/AlignFormer_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Generating Aligned Pseudo-Supervision from Non-Aligned Data for Image Restoration in Under-Display Camera</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2023</b></em>
+                <br> 
+             Ruicheng Feng, <b>Chongyi Li</b>, Huaijin Chen, Shuai Li, Jinwei Gu, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 		  <div class="publication">
             <img src="logo/UDHFour.png" onmouseover="this.src='logo/UDHFour.png';" onmouseout="this.src='logo/UDHFour.png';" class="publogo"  width="300 px">
             <p> 
