--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@ research and develop advanced deep learning algorithms for image and video enhan
             <img src="./logo/TIP_RS2020_logo.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
+                    <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense Attention Fluid Network for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
 		     <br>
 		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper &  ESI Highly Cited Paper]</font></a></b></em>
