--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 		     <br>
 		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper &  ESI Highly Cited Paper]</font></a></b></em>
                 <br>
-                Qijian Zhang, Runmin Cong, <b>Chongyi Li</b>, Ming-Ming Cheng, Yuming Fang, Xiaochun Cao, Yao Zhao, and Sam Kwong.
+                Qijian Zhang, Runmin Cong, <b>Chongyi Li</b>, et al.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">PDF</a>| 
