--- a/index.html
+++ b/index.html
@@ -737,10 +737,10 @@ research and develop advanced deep learning algorithms for image and video enhan
             <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/underwater_video_demo.mp4"> <source src="MLLE_files/videos/underwater_video_demo.mp4" type="video/mp4"></video>
             <p> 
                 <strong>
-                    <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
+                    <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement  TIP, 2022 </a>
                 </strong>
 		  <br> 
-		<em><b>TIP, 2022 <a href="" target="_blank"><font color="#ff0000"> [ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
+		<em><b><a href="" target="_blank"><font color="#ff0000"> [ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
                 <br> 
                Weidong Zhang, Peixian Zhuang, Haihan Sun, Guohou Li, Sam Kwong, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
