--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
                 </strong>
 		  <br> 
-		<em><b><a  TIP, 2022  href="" target="_blank"><font color="#ff0000"> [Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
+		<em><b>TIP, 2022<a  href="" target="_blank"><font color="#ff0000"> [Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
                 <br> 
                Weidong Zhang, Peixian Zhuang, Haihan Sun, Guohou Li, Sam Kwong, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
