--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/03 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
 <li> 2023/03 --Five papers got accepted by <strong>CVPR 2023</strong>.</li>
 <li> 2023/02 --Elevated to the grade of <strong>IEEE Senior Member</strong>!</li>
 <li> 2023/02 --We thank IEEE Signal Processing Society for highlighting our IEEE TIP'2020 work, An Underwater Image Enhancement Benchmark Dataset and Beyond, as one of SPS's top-25 most downloaded articles on IEEE Xplore®, 2021-2022</li>
@@ -880,7 +881,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">Low-Light Image and Video Enhancement Using Deep Learning: A Survey</a>
                 </strong>
 		  <br> 
-		<em><b>TPAMI, 2021</b></em>
+		<em><b>TPAMI, 2021 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper]</font></a></b></em>
                 <br> 
                <b>Chongyi Li</b>, Chunle Guo, Linghao Han, Jun Jiang, Ming-Ming Cheng, Jinwei Gu, Chen Change Loy.
                 <br>
@@ -906,7 +907,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="https://ieeexplore.ieee.org/document/9369102">Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</a>
                 </strong>
 		  <br>
-		<em><b>TPAMI, 2021 <a href="" target="_blank"><font color="#ff0000">[TPAMI Popular Articles]</font></a></b></em>
+		<em><b>TPAMI, 2021 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & TPAMI Popular Articles]</font></a></b></em>
                 <br>
                <b>Chongyi Li</b>, Chunle Guo, Chen Change Loy.
                 <br>
