--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/03 --Excited to announce two papers were selected as Highlight CVPR 2023 as <strong>Highlight, 10% of accepted papers, 2.5% of submissions</strong>!</li>
 <li> 2023/03 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
 <li> 2023/03 --Five papers got accepted by <strong>CVPR 2023</strong>.</li>
 <li> 2023/02 --Elevated to the grade of <strong>IEEE Senior Member</strong>!</li>
@@ -258,7 +259,56 @@ research and develop advanced deep learning algorithms for image and video enhan
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Selected Publications:</h2>
         <br>
 
-			  <div class="publication">
+	   <div class="publication">
+            <img src="logo/BracketFlare_logo.png" onmouseover="this.src='logo/BracketFlare_logo.png';" onmouseout="this.src='logo/BracketFlare_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Nighttime Smartphone Reflective Flare Removal Using Optical Center Symmetry Prior</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2023 <a href="" target="_blank"><font color="#ff0000">[Highlight]</font></a></b></em>
+                <br> 
+              Yuekun Dai, Yihang Luo, Shangchen Zhou, <b>Chongyi Li<sup>+</sup></b>, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	 <br>
+	<br />
+	<br />
+	<br />
+	
+	
+	   <div class="publication">
+            <img src="logo/DNF_logo.png" onmouseover="this.src='logo/DNF_logo.png';" onmouseout="this.src='logo/DNF_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">DNF: Decouple and Feedback Network for Seeing in the Dark</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2023 <a href="" target="_blank"><font color="#ff0000">[Highlight]</font></a></b></em>
+                <br> 
+              Xin Jin,  Linghao Han, Zhen Li, Zhi Chai, Chunle Guo, and <b>Chongyi Li</b>.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	<div class="publication">
          <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/RIDCP_video.mp4"> <source src="logo/RIDCP_video.mp4" type="video/mp4"></video>    
 	<p>     
 	
@@ -286,53 +336,9 @@ research and develop advanced deep learning algorithms for image and video enhan
 	
 	
 		
-   <div class="publication">
-            <img src="logo/DNF_logo.png" onmouseover="this.src='logo/DNF_logo.png';" onmouseout="this.src='logo/DNF_logo.png';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">DNF: Decouple and Feedback Network for Seeing in the Dark</a>
-                </strong>
-		  <br> 
-		<em><b>CVPR, 2023</b></em>
-                <br> 
-              Xin Jin,  Linghao Han, Zhen Li, Zhi Chai, Chunle Guo, and <b>Chongyi Li</b>.
-                <br>
-                <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	<br />
-	<br />
+
 	
-   <div class="publication">
-            <img src="logo/BracketFlare_logo.png" onmouseover="this.src='logo/BracketFlare_logo.png';" onmouseout="this.src='logo/BracketFlare_logo.png';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Nighttime Smartphone Reflective Flare Removal Using Optical Center Symmetry Prior</a>
-                </strong>
-		  <br> 
-		<em><b>CVPR, 2023</b></em>
-                <br> 
-              Yuekun Dai, Yihang Luo, Shangchen Zhou, <b>Chongyi Li</b>, and Chen Change Loy.
-                <br>
-                <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	 <br>
-	<br />
-	<br />
-	<br />
+
 	
 	<div class="publication">
             <img src="logo/SKF_logo.png" onmouseover="this.src='logo/SKF_logo.png';" onmouseout="this.src='logo/SKF_logo.png';" class="publogo"  width="300 px">
