--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@ research and develop advanced deep learning algorithms for image and video enhan
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+		    <a href="https://rq-wu.github.io/projects/RIDCP/index.html">Project Page</a>| 	
+                    <a href="https://github.com/RQ-Wu/RIDCP_dehazing">Code</a>
                 </span>
             </p>
           </div>
