--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
-<li> 2023/03 --Excited to announce two papers were selected as Highlight CVPR 2023 as <strong>Highlight, 10% of accepted papers, 2.5% of submissions</strong>!</li>
+<li> 2023/03 --Excited to announce two papers were selected as CVPR 2023 <strong>Highlight, 10% of accepted papers, 2.5% of submissions</strong>!</li>
 <li> 2023/03 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
 <li> 2023/03 --Five papers got accepted by <strong>CVPR 2023</strong>.</li>
 <li> 2023/02 --Elevated to the grade of <strong>IEEE Senior Member</strong>!</li>
