--- a/index.html
+++ b/index.html
@@ -252,7 +252,31 @@ research and develop advanced deep learning algorithms for image and video enhan
 <br>
 <hr />
 
-
+	<div class="publication">
+         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/CLIP-LIT_video_demo.mp4"> <source src="logo/CLIP-LIT_video_demo.mp4" type="video/mp4"></video>    
+	<p>     
+	
+                <strong>
+                    <a href="">Iterative Prompt Learning for Unsupervised Backlit Image Enhancement</a>
+                </strong>
+		  <br> 
+		<em><b>2023 </b></em>
+                <br> 
+              Zhexin Liang, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/2303.17569">PDF</a>| 
+		    <a href="https://zhexinliang.github.io/CLIP_LIT_page/">Project Page</a>| 	
+                    <a href="https://zhexinliang.github.io/CLIP_LIT_page/g">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br>
+	<br />
+	<br />
+	<br />
 
 
 <div class="container">
