--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <li> 2023/03 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
 <li> 2023/03 --Five papers got accepted by <strong>CVPR 2023</strong>.</li>
 <li> 2023/02 --Elevated to the grade of <strong>IEEE Senior Member</strong>!</li>
-<li> 2023/02 --We thank IEEE Signal Processing Society for highlighting our IEEE TIP'2020 work, An Underwater Image Enhancement Benchmark Dataset and Beyond, as one of SPS's top-25 most downloaded articles on IEEE Xplore®, 2021-2022</li>
+<li> 2023/02 --We thank IEEE Signal Processing Society  <a href="https://signalprocessingsociety.org/publications-resources/blog/revitalizing-underwater-image-enhancement-deep-learning-era" target="_blank"><font color="#ff0000">SPS Blog</font></a>.  for highlighting our IEEE TIP'2020 work, An Underwater Image Enhancement Benchmark Dataset and Beyond, as one of SPS's top-25 most downloaded articles on IEEE Xplore®, 2021-2022</li>
 <li> 2023/02 --We organize a special issue on Mobile Intelligent Photography and Imaging in <strong>International Journal of Computer Vision (IJCV)</strong>. (Paper submission deadline: 1 June 2023)</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by ICLR 2023 as <strong>Oral, notable-top-5%</strong>!</li>
 <li> 2023/01 --Excited to announce one paper has been accepted by AAAI 2023 as <strong>Oral</strong>!</li>
