--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">BeautyREC: Robust, Efficient, and Content-preserving Makeup Transfer</a>
                 </strong>
 		  <br> 
-		<em><b>2023</b></em>
+		<em><b>CVPRW, 2023</b></em>
                 <br> 
               Qixin Yan, Chunle Guo, Jixin Zhao, Yuekun Dai, Chen Change Loy, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
@@ -526,7 +526,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                     <a href="">FlexiCurve: Flexible Piecewise Curves Estimation for Photo Retouching</a>
                 </strong>
 		  <br> 
-		<em><b>2023</b></em>
+		<em><b>CVPRW, 2023</b></em>
                 <br> 
               <b>Chongyi Li</b>, Chunle Guo, Shangchen Zhou, Qiming Ai, Ruicheng Feng, and Chen Change Loy.
                 <br>
