--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@ research and develop advanced deep learning algorithms for image and video enhan
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+		    <a href="https://li-chongyi.github.io/FlexiCurve">Project Page</a>| 	
+                    <a href="https://li-chongyi.github.io/FlexiCurve">Code</a>
                 </span>
             </p>
           </div>
