--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/04 --Excited to announce one paper got accepted by <strong>ICML 2023</strong> and was selected as <strong>Oral</strong>.</li>
 <li> 2023/04 --Two papers got accepted by <strong>CVPR NTIRE Workshop 2023</strong>.</li>
 <li> 2023/03 --Excited to announce two papers were selected as CVPR 2023 <strong>Highlight, 10% of accepted papers, 2.5% of submissions</strong>!</li>
 <li> 2023/03 --Two papers have been recognized as <strong>ESI Highly Cited Paper</strong></li> 
@@ -286,7 +287,32 @@ research and develop advanced deep learning algorithms for image and video enhan
 	<br />
 	<br />
 	<br />
-	
+
+		
+	   <div class="publication">
+            <img src="logo/Fourmer_logo.png" onmouseover="this.src='logo/Fourmer_logo.png';" onmouseout="this.src='logo/Fourmer_logo.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Fourmer: An Efficient Global Modeling Paradigm for Image Restoration</a>
+                </strong>
+		  <br> 
+		<em><b>ICML, 2023 <a href="" target="_blank"><font color="#ff0000">[Oral]</font></a></b></em>
+                <br> 
+              Man Zhou, Jie Huang, Chunle Guo, and <b>Chongyi Li<sup>+</sup></b>.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	 <br>
+	<br />
+	<br />
+	<br />
 	
 	   <div class="publication">
             <img src="logo/BracketFlare_logo.png" onmouseover="this.src='logo/BracketFlare_logo.png';" onmouseout="this.src='logo/BracketFlare_logo.png';" class="publogo"  width="300 px">
