--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                 <span class="links">
                     <a href="https://arxiv.org/abs/2302.11831">PDF</a>| 
 		    <a href="https://li-chongyi.github.io/UHDFour/">Project Page</a>| 	
-                    <a href="https://github.com/Li-Chongyi/UHDFour_code">Code</a>
+                    <a href="https://github.com/Li-Chongyi/UHDFour_code">Code</a>|
 		    <a href="https://drive.google.com/drive/folders/1IneTwBsSiSSVXGoXQ9_hE1cO2d4Fd4DN?usp=share_link">Dataset</a>
                 </span>
             </p>
