--- a/UHDFour/index.html
+++ b/UHDFour/index.html
@@ -215,23 +215,23 @@
           <tr>
             <td width="30%">
               <center>
-                <a href="#" target="_blank" class="imageLink"><img
+                <a href="https://arxiv.org/abs/2302.11831" target="_blank" class="imageLink"><img
                     src="./src/paper.png" , height="120"></a><br><br>
                 <a href="https://arxiv.org/abs/2302.11831" disabled target="_blank">Paper</a>
               </center>
             </td>
             <td width="30%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img
+                <a href="https://drive.google.com/drive/folders/1IneTwBsSiSSVXGoXQ9_hE1cO2d4Fd4DN" target="_blank" class="imageLink"><img
                     src="./src/cloud-download.png" , height="120"></a><br><br>
-                <a href="" target="_blank">Dataset</a>
+                <a href="https://drive.google.com/drive/folders/1IneTwBsSiSSVXGoXQ9_hE1cO2d4Fd4DN" target="_blank">Dataset</a>
               </center>
             </td>
             <td width="30%" valign="middle">
               <center>
-                <a href="" target="_blank" class="imageLink"><img
+                <a href="https://github.com/Li-Chongyi/UHDFour_code" target="_blank" class="imageLink"><img
                     src="./src/icon_github.png" , height="120"></a><br><br>
-                <a href="" target="_blank">Code</a>
+                <a href="https://github.com/Li-Chongyi/UHDFour_code" target="_blank">Code</a>
               </center>
             </td>
           </tr>
