--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 	
 	
 	<div class="publication">
-         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/Backlit_demo.mp4"> <source src="logo/CLIP-Backlit_demo.mp4" type="video/mp4"></video>    
+         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/backlit_demo.mp4"> <source src="logo/backlit_demo.mp4" type="video/mp4"></video>    
 	<p>     
 	
                 <strong>
