--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2023/05 --We release the code (BeautyREC) and dataset (BeautyFace).</li>
 <li> 2023/04 --We release the code (UHDFour) and dataset (UHD-LL) of our ICLR 2023 work.</li>
 <li> 2023/04 --Excited to announce one paper got accepted by <strong>ICML 2023</strong> and was selected as <strong>Oral</strong>.</li>
 <li> 2023/04 --Two papers got accepted by <strong>CVPR NTIRE Workshop 2023</strong>.</li>
@@ -538,7 +539,7 @@ research and develop advanced deep learning algorithms for image and video enhan
                 <span class="links">
                     <a href="https://arxiv.org/abs/2212.05855">PDF</a>| 
 		    <a href="https://li-chongyi.github.io/BeautyREC_files/">Project Page</a>| 	
-                    <a href="https://li-chongyi.github.io/BeautyREC_files/">Code</a>
+                    <a href="https://github.com/learningyan/BeautyREC/">Code</a>
                 </span>
             </p>
           </div>
