--- a/index.html
+++ b/index.html
@@ -114,14 +114,15 @@ li, ul {font-weight: normal;}
 
 	<br />
 	<br />
-
+	<br />
+	<br />
 
 
 
 
 
 <h2>
-<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hiring:</h2>
+<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open Positions:</h2>
 <br><p><font color="blue">I am looking for PhD students and Master students who want to conduct
 research and develop advanced deep learning algorithms for image and video enhancement and restoration, computational imaging, and image signal processor to join my resarch group at Nankai University (2023 Fall or 2024 Fall).</font></p></br>
 </ul>
