--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ li, ul {font-weight: normal;}
 <p>
 <small>📍 ABN-02b-11, NTU, SG</small><br>
 <small>📧lichongyi25 at gmail.com</small><br>
-<small>📧chongyi.li at ntu.edu.sg</small><br><br>
+
 <a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=en" target="_blank">[Google Scholar]</a> <br>
@@ -83,7 +83,7 @@ li, ul {font-weight: normal;}
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>
 <br><strong>2023/07 - </strong>, I am an incoming Full Professor with the School of Computer Science, Nankai University, China.</br>
-<br><strong>2021/10 - 2023/07</strong>, I wa a Research Assistant Professor with the School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
+<br><strong>2021/10 - 2023/07</strong>, I was a Research Assistant Professor with the School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 <br><strong>2020/01 - 2021/10</strong>, I was a research fellow at the <a href="https://www.mmlab-ntu.com/"><font color="#1C86EE"> MMLab@NTU</font></a>, <a href="https://www.ntu.edu.sg/s-lab/our-people"><font color="#1C86EE"> S-Lab</font></a>, and worked with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 <br><strong>2018/10 - 2020/01</strong>, I was a postdoctoral fellow and worked with Chair Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
 <br><strong>2016/12 - 2017/12</strong>, I was a joint Ph.D. student at Research School of Engineering, Australian National University (ANU), Canberra, Australia, under the supervision of Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow).</br>
